# quant-data-pipeline

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  dg.toml  docker-compose-doris.yaml  opencode.json
.github/: WORKFLOW.md
.github/scripts/: worktree.sh
dbt_project/: dbt_project.yml
dbt_project/models/: schema.yml  sources.yml
dbt_project/models/mart/: customer_summary.sql  daily_revenue.sql
dbt_project/models/staging/: stg_customers.sql  (+1 more)
deployments/local/: pyproject.toml
docs/: DEVELOPMENT.md  dagster-deployment-guide.md
projects/core/: pyproject.toml
projects/core/src/core/: definitions.py
projects/core/src/core/defs/: check_report.py  daily_stock_quotes.py  dbt_assets.py  industrial_value_added.py  init_sample_data.py  macro_data.py  quant_macro_data.py  resources.py  retail_sales.py  sample_asset.py
projects/core/tests/: test_industrial_value_added.py  test_macro_data.py  test_retail_sales.py
projects/doris-integration/: pyproject.toml
projects/doris-integration/src/doris_integration/: __init__.py  definitions.py
projects/doris-integration/src/doris_integration/dbt/: assets.py  resources.py
projects/doris-integration/src/doris_integration/dbt/dbt_project/: dbt_project.yml  profiles.yml
projects/doris-integration/src/doris_integration/dbt/dbt_project/models/marts/: fct_daily_returns.sql
projects/doris-integration/src/doris_integration/dbt/dbt_project/models/staging/: sources.yml  stg_stock_quotes.sql
projects/doris-integration/src/doris_integration/defs/approach1_mysql/: assets.py  resources.py
scripts/: worktree.sh
