[project]
name = "doris-integration"
requires-python = ">=3.12,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.20",
    "pymysql>=1.1.0",
    "pandas>=2.0.0",
    "dbt-doris>=1.0.0",
    "dagster-dbt>=0.28.0",
    "dbt-core>=1.7.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "doris_integration"
registry_modules = [
    "doris_integration.components.*",
]
